# r3r

./: LICENSE  Makefile  Makefile.fpc  Makefile.in  R3R.Desktop.in  README  README.md  _r3r  cnf2lng.php  configure  configure.ac  configure.in  default.apspec.in  en  eo  feeds.txt  makelinuxdist  makesrcdist  makewindist  makewindist.bat  php-gtk-test.php  php-suffix.php  php.ini.gtk  r3r  r3r-installer  r3r-settedup.bat  r3r-settitle  r3r.bat  r3r.desktop  r3r.in  r3r.php  readme.md  settingsGui.php  setup.iss  subscriptions.php  version.php
autopackage/: default.apspec.in
doc/: Makefile
doc/api/: Makefile  Makefile.fpc  libr3r.pas.xml
doc/deutsch/: LIZENZ
doc/english/: 1.2.x  BUILDING  INSTALLING  LICENSE  README  gnu-pascal
doc/esperanto/: INSTALI  MUNTI  PERMESILO
doc/man/: Makefile  r3r.1  r3r.1.de  r3r.1.eo  r3r.1.es
docs/: Makefile  libr3r.pas.xml
docs/api/: Makefile
docs/deutsch/: LIZENZ
docs/english/: 1.2.x  BUILDING.md  INSTALLING.md  README.md
docs/español/: LICENCIA
docs/esperanto/: INSTALI.md  MUNTI.md  PERMESILO
docs/man/: r3r.1  r3r.1.de  r3r.1.eo  r3r.1.es
dok/deutsch/: LIZENZ
dok/english/: 1.2.x  BUILDING  INSTALLING  README  gnu-pascal
dok/esperanto/: MUNTANTE  PERMESILO
icons/: .cvsignore  Makefile  Makefile.fpc  r3r.rc  r3r.xpm
includes/: cache.php  callbacks.php  feedParser.php  globals.php  guiConvFuncs.php  l10n.php  mainAppGui.php  networking.php  settings.php  settingsGui.php  subscriptions.php
intl/: r3r.eo.po  r3r.pot  r3rrs.pas
l10n/: cnf2lng.php  en  en_US  eo
launchers/: r3r-settedup.bat  r3r.bat
libr3r/: Makefile  _info.pas  getter.pas  info.pas.in  libr3r.pas  libr3r.pas.xml  rmessage.pas  ver.in.pas
libr3r/formats/: Makefile  atom.pas  esf.pas  feed.pas  feeditem.pas  nonxml.pas  rss.pas  rss3.pas  xml.pas
libr3r/po/: Makefile  de.po  en.po  eo.po  libr3r_rs.pas  libr3rstrings.pas
libr3r/protocols/: Makefile  getter.pas  headers.pas  http.pas  httpcache.pas  localfile.pas  rsock.pas
libr3r/regexpr/: Makefile  RegExpr.pas
libr3r/settings/: Makefile  import.inc  inisettings.inc  regsettings.inc  routines.inc  rsettings.pas  rsettings_routines.pas  settingsh.inc
m4/: nls.m4  version.m4
po/: en.po  eo.po  r3rrs.pas
scripts/: common.make  makelinuxdist  makesrcdist  makewindist  php.ini-gtk  prepdist  setup.iss  setup.iss.in  version.pl
scripts/autopackage/: default.apspec.in
scripts/iss/: setup.iss.in
scripts/setup/: Makefile  PKGBUILD.in  description-pak  r3r.desktop  r3r.desktop.in
scripts/setup/autopackage/: _default.apspec  r3r.desktop
scripts/setup/is/: Esperanto.isl  LEERME  LEERME.TXT  LEGUMIN  LEGUMIN.TXT  LESENMICH  LESENMICH.TXT  Makefile  Makefile.fpc  README.TXT  _r3r.iss  itd_de.ini  itd_eo.ini  itd_es.ini
src/: Makefile
src/bindings/: Makefile
src/bindings/expas/: Makefile  common.make  expas.pas
src/bindings/gettext/: libintl.pas
src/bindings/iconv/: Makefile  iconv.pas
src/bindings/libcurl/: Makefile  curlcore.pas  curleasy.pas  curllib.inc  curlslist.pas  curlver.pas
src/bindings/libidn/: Makefile  libidn.pas
src/bindings/libidn2/: Makefile  libidn2.pas
src/bindings/libini/: Makefile  libini.pas
src/bindings/pcre/: pcre.pas  pcreimports.inc
src/bindings/readline/: Makefile  history.pas  keymaps.inc  readline.pas  rltypedefs.inc  tilde.inc
src/libr3r/: Makefile  Makefile.fpc  _info.pas  _libr3r.pas  _rupdate.pas  libr3r.h  libr3r.pas  libr3r_shared.pas  rfilter.pas  rgetfeed.pas  rhistory.pas  rmessage.pas  rparseurl.pas  rsubscriptions.pas  rupdate.pas
src/libr3r/formats/: Makefile  Makefile.fpc  atom.pas  dc.pas  esf.pas  feed.pas  feeditem.pas  html4ent.pas  itemcallbacks.pas  mod_enclosure.pas  nonxml.pas  rss.pas  rss3.pas  saxcallbacks.pas  xml.pas
src/libr3r/po/: Makefile  Makefile.fpc  _libr3rstrings.pas  de.po  en.po  eo.po  es.po  libr3rstrings.pas  libr3rstrings.pot
src/libr3r/protocols/: Makefile  Makefile.fpc  headers.pas  http.pas  httpcache.pas  localfile.pas  rsock.pas  sockconsts.pas
src/libr3r/settings/: Makefile  Makefile.fpc  binsettings.inc  inisettings.inc  libinisettings.inc  regsettings.inc  rsettings.pas  rsettings_routines.pas  rsettings_strings.pas  settingsh.inc  tabsettings.inc
src/ui/: Makefile
src/ui/classic/: Makefile  Makefile.fpc  classic.lpi  classic.lrs  classic.pas  r3r.lpr
src/ui/html/: Makefile  (+3 more)
src/utils/: Makefile
src/wrappers/: Makefile
tui/: Makefile  tui.pas
tui/po/: Makefile  de.po  en.po  eo.po  tui_rs.pas  tuistrings.pas
ui/: Makefile
ui/classic/: Makefile  classic.lfm  classic.pas  r3r.lpr
ui/tui/: Makefile  r3r.pas  tui.pas
(+182 files in other folders)
