dnl Process this file with autoconf to produce a configure script.
AC_INIT(r3r.php)

AC_SUBST(configured_user)
configured_user=`id -un`

dnl Custom options
AC_ARG_WITH(wget, [  --without-wget    Don't use wget to download missing items], use_wget=false, use_wget=true)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S

AC_PATH_PROGS(PHP, php)
AC_PATH_PROGS(PKG_CONFIG, pkg-config)
AC_PATH_PROGS(WGET, wget)

dnl Checks for required PHP features.
AC_MSG_CHECKING(for PHP_SHLIB_SUFFIX)
php_suffix_out=`php -r "echo PHP_SHLIB_SUFFIX;"`
if test "$php_suffix_out" = "PHP_SHLIB_SUFFIX";
then
  AC_ERROR(Couldn't get PHP_SHLIB_SUFFIX.  PHP 4.3.0 or higher is required.  Please get an adequate version from http://www.php.net/)
else
  AC_MSG_RESULT($php_suffix_out)
fi

AC_MSG_CHECKING(for PHP-GTK presence)
php_gtk_out=`php -r "dl('php_gtk.' . PHP_SHLIB_SUFFIX);"`
if test -z "$php_gtk_out";
then
  AC_MSG_RESULT(yes)
else
  AC_MSG_RESULT(no)
  AC_ERROR(Please get PHP-GTK 1.0.0 from http://www.gtk.php.net/)
fi

AC_MSG_CHECKING(for PCRE presence)
php_pcre_out=`php -m|grep pcre`
if test -n "$php_pcre_out";
then
  AC_MSG_RESULT(yes)
else
  AC_MSG_RESULT(no)
  AC_WARN(The PCRE extension, which is required for feed parsing, is not present.)
fi

AC_MSG_CHECKING(for XML presence)
php_xml_out=`php -m|grep xml`
if test -n "$php_xml_out";
then
  AC_MSG_RESULT(yes)
else
  AC_MSG_RESULT(no)
  AC_WARN(The XML extension, which is required for parsing RSS and Atom feeds, is not present)
fi

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile R3R.Desktop r3r)
